Remove extra copy construction of GURL in client hints

Also, early return before doing the copy construction if
no persistent client hints are available.

Bug: 768583
Change-Id: I34d69a4805d45ec1f48c96d6621eb0f981491044
Reviewed-on: https://chromium-review.googlesource.com/737651
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Charlie Harrison <csharrison@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511887}
Former-commit-id: 2f3eb341b170543509f9f3c8ada31b63f52bb5b3