chrome/common/client_hints/client_hints.cc
@@ -14,10 +14,13 @@ void GetAllowedClientHintsFromSource(
     const GURL& url,
     const ContentSettingsForOneType& client_hints_rules,
     blink::WebEnabledClientHints* client_hints) {
+  if (client_hints_rules.empty())
+    return;
+
   if (!content::IsOriginSecure(url))
     return;
 
-  const GURL origin = GURL(url).GetOrigin();
+  const GURL& origin = url.GetOrigin();
 
   for (const auto& rule : client_hints_rules) {
     // Look for an exact match since persisted client hints are disabled by
